--- a/wp108/p5.html
+++ b/wp108/p5.html
@@ -9,6 +9,8 @@
     <head>
         <style>
             /*CSS*/
+            .left{ width:30%; float:left}
+            .right{ width:70%; float:right;}
             h1{
                 background-color: rgba(0, 0, 0, 0.6);
                 color: white;
