--- a/final/index.html
+++ b/final/index.html
@@ -38,7 +38,7 @@
   <div id="main" class="table" style="text-align:center">
   </div>
 </main>
-<body><!--幻燈片-->
+<!--幻燈片-->
     <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
@@ -68,7 +68,7 @@
         <span class="dot" onclick="currentSlide(1)"></span> 
         <span class="dot" onclick="currentSlide(2)"></span> 
         <span class="dot" onclick="currentSlide(3)"></span> 
-      </div></body>
+      </div>
 
 <footer>
 </footer>
